# type_enum

./: .gitignore  CONTRIBUTING.md  README.md  example.py  make_release.sh  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml
tests/: instantiation_test.py  matching_test.py  misc_test.py
type-enum/: example.py  pyproject.toml
type-enum-plugin/: README.md  pyproject.toml
type-enum-plugin/type_enum_plugin/: core.py
type-enum/tests/: common.py  instantiation_test.py  matching_test.py  misc_test.py  representations_test.py  test_instantiation.py  test_matching.py  test_misc.py  test_representations.py
type-enum/type_enum/: __init__.py  _core.py
type_enum/: core.py  utils.py
