[tool.poetry]
name = "type-enum-plugin"
version = "0.2.1"
description = "Mypy plugin for type-enum."
authors = ["Thomas MK <tmke8@posteo.net>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "type_enum_plugin"}]
classifiers=[
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
repository="https://github.com/tmke8/type_enum"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
