[tool.poetry]
name = "type-enum-plugin"
version = "0.4.0"
description = "Mypy plugin for type-enum."
authors = ["Thomas MK <tmke8@posteo.net>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "type_enum_plugin" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/tmke8/type_enum"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5"
ruff = ">=0.0.292"

[tool.ruff]
line-length = 88
select = [
    "I", # isort
]

[tool.ruff.isort]
known-third-party = ["mypy", "pytest"]
extra-standard-library = ["typing_extensions"]
no-lines-before = ["future", "standard-library"]
force-sort-within-sections = true
split-on-trailing-comma = false
classes = ["MDEF"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
