[project]
name = "type-enum-plugin"
version = "0.5.0"
description = "Mypy plugin for type-enum."
authors = [
  { name = "Thomas MK", email = "tmke8@posteo.net" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
# packages = [{ include = "type_enum_plugin" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "mypy",
]

[project.urls]
Documentation = "https://github.com/tmke8/type-enum#readme"
Issues = "https://github.com/tmke8/type-enum/issues"
Source = "https://github.com/tmke8/type-enum"

[tool.rye]
managed = true
dev-dependencies = ["mypy >= 1.8", "ruff >= 0.0.292"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I", # isort
]

[tool.ruff.lint.isort]
known-third-party = ["mypy", "pytest"]
extra-standard-library = ["typing_extensions"]
no-lines-before = ["future", "standard-library"]
force-sort-within-sections = true
split-on-trailing-comma = false
classes = ["MDEF"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
