[project]
name = "type-enum"
description = 'Concise sum types in Python.'
readme = "../README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Thomas MK", email = "tmke8@posteo.net" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/tmke8/type-enum#readme"
Issues = "https://github.com/tmke8/type-enum/issues"
Source = "https://github.com/tmke8/type-enum"

[tool.hatch.version]
path = "type_enum/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "black ~= 23.1",
  "mypy ~= 1.0",
  "ruff >= 0.0.254",
  "type-enum-plugin @ {root:uri}/../type-enum-plugin",
  "typing-extensions >= 4.5.0",
]

[tool.hatch.envs.default.scripts]
test = "python -m unittest -v"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.mypy]
plugins = "type_enum_plugin"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["type_enum.*"]
ignore_errors = true

[tool.ruff]
select = [
    "I", # isort
]

[tool.ruff.isort]
known-third-party = ["mypy", "pytest"]
extra-standard-library = ["__future__", "typing_extensions"]
force-sort-within-sections = true
split-on-trailing-comma = false
#classes = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
