[tool.poetry]
name = "type-enum"
version = "0.4.0"
description = "Concise sum types in Python."
authors = ["Thomas MK <tmke8@posteo.net>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "type_enum" }]
include = ["type_enum/py.typed"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/tmke8/type_enum"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
mypy = "^1.7.1"
type-enum-plugin = { path = "../type-enum-plugin", develop = true }
typing-extensions = "^4.5.0"

[tool.mypy]
plugins = "type_enum_plugin"
strict = true
warn_unused_ignores = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["type_enum.*"]
ignore_errors = true

[tool.ruff]
line-length = 88
select = [
    "I", # isort
]

[tool.ruff.isort]
known-third-party = ["mypy", "pytest"]
extra-standard-library = ["typing_extensions"]
no-lines-before = ["future", "standard-library"]
force-sort-within-sections = true
split-on-trailing-comma = false
#classes = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
